--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,8 @@ html,
 body {
     padding: 0;
     margin: 0;
+    overflow: hidden;
+    border-radius: 12px;
+    border: 1px solid #eee;
+    
 }
