--- a/src/index.css
+++ b/src/index.css
@@ -15,4 +15,5 @@ body {
     border: 1px solid #eee;
     border-radius: 8px;
     overflow: hidden;
+    box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.20);
 }
