--- a/src/app.css
+++ b/src/app.css
@@ -1,12 +1,4 @@
-* {
-    user-select: none !important;
-}
-
-html,
 body {
-    padding: 0;
-    margin: 0;
-    overflow: hidden;
     background-color: transparent;
     padding: 10px;
 }
@@ -15,7 +7,7 @@ body {
     border: 1px solid #eee;
     border-radius: 8px;
     overflow: hidden;
-    box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.20);
+    box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.2);
 }
 
 th.ant-table-column-sort {
